--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -2,4 +2,18 @@
 
 {%  block title %} Login {% endblock %}
 
-{%  block content %} Ici le contenue du site !! {% endblock %}
+{%  block content %}
+
+    <div id='contentLogin'>
+        <h1>Login</h1>
+        <form method='GET' action='/login'>
+            <input type='text' name='pseudo' placeholder='Pseudo' />
+            <input type='password' name='pwd' placeholder='Password' />
+            <input type='reset' value='Annuler' id='spaceLogin'/>
+            <input type='submit' value='Valider' />
+        </form>
+    </div>
+
+
+
+{% endblock %}
