--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -3,16 +3,27 @@
 <html>
     <head>
         <title> LibrarizeMe : {% block title %}{% endblock %}</title>
-        <link rel='stylesheet' type='text/css' href='stylesheets/style.css'>
+        <meta charset='UTF-8' />
+        <link rel='icon' href='images/favicon.ico' />
+        <link rel='stylesheet' type='text/css' href='stylesheets/style.css' />
     </head>
 
     <body>
+        <header>
+            <div id='logo'>
+                <div class='libraryLeftIcon'></div>
+                <div id='nameOrganization'></div>
+                <div class='libraryRightIcon'></div>
+            </div>
+        </header>
+
+
         <div id='content'>
             {% block content %}{% endblock %}
         </div>
 
         <footer>
-            <div id='footer'>Ici le pied de page</div>
+            <div id='footer'>&#64;2017 LibrarizeMe</div>
         </footer>
     </body>
 
