--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -6,7 +6,7 @@
 
     <div id='contentLogin'>
         <h1>Login</h1>
-        <form method='GET' action='/login'>
+        <form method='GET' action='login'>
             <input type='text' name='pseudo' placeholder='Pseudo' />
             <input type='password' name='pwd' placeholder='Password' />
             <input type='reset' value='Annuler' id='spaceLogin'/>
