--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -5,7 +5,7 @@
         <title> LibrarizeMe : {% block title %}{% endblock %}</title>
         <meta charset='UTF-8' />
         <link rel='icon' href='images/favicon.ico' />
-        <link rel='stylesheet' type='text/css' href='stylesheets/style.css' />
+        <link rel='stylesheet' type='text/css' href='../stylesheets/style.css' />
     </head>
 
     <body>
