--- a/public/stylesheets/sass/_login.scss
+++ b/public/stylesheets/sass/_login.scss
@@ -6,7 +6,7 @@
         width: 33%;
         margin-left: auto;
         margin-right: auto;
-        padding-bottom: 30px;
+        padding-bottom: 20px;
         border-radius: 15px;
         margin-top: 150px;
 
@@ -19,6 +19,12 @@
 
             #spaceLogin {
                 margin-right: 25px;
+            }
+
+            #loginRegister {
+                display: block;
+                margin-bottom: 20px;
+                margin-top: -7px
             }
         }
 
@@ -34,10 +40,6 @@
             border-radius: 5px;
             height: 30px;
             padding-left: 10px;
-        }
-
-        input[type='password'] {
-            margin-bottom: 30px;
         }
     }
 
