--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,12 +5,12 @@ input[type='submit'] { background-color: #337ab7; }
 
 input[type='reset'] { background-color: #d9534f; }
 
-#content #contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 30px; border-radius: 15px; margin-top: 150px; }
+#content #contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 150px; }
 #content #contentLogin h1 { text-align: center; }
 #content #contentLogin form { text-align: center; }
 #content #contentLogin form #spaceLogin { margin-right: 25px; }
+#content #contentLogin form #loginRegister { display: block; margin-bottom: 20px; margin-top: -7px; }
 #content #contentLogin input[type='text'], #content #contentLogin input[type='password'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
-#content #contentLogin input[type='password'] { margin-bottom: 30px; }
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
