--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -6,6 +6,9 @@
         <meta charset='UTF-8' />
         <link rel='icon' href='images/favicon.ico' />
         <link rel='stylesheet' type='text/css' href='../stylesheets/style.css' />
+        <script src="../javascripts/jQuery.js"></script>
+        <script> $j = jQuery.noConflict() </script>
+        <script src="../javascripts/main.js"></script>
     </head>
 
     <body>
