--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -8,7 +8,7 @@
         <link rel='stylesheet' type='text/css' href='../stylesheets/style.css' />
         <script src="../javascripts/jQuery.js"></script>
         <script> $j = jQuery.noConflict() </script>
-        <script src="../javascripts/main.js"></script>
+        <script src="../javascripts/login.js"></script>
     </head>
 
     <body>
