update favicon path

--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -4,7 +4,7 @@
     <head>
         <title> LibrarizeMe : {% block title %}{% endblock %}</title>
         <meta charset='UTF-8' />
-        <link rel='icon' href='images/favicon.ico' />
+        <link rel='icon' href='../images/favicon.ico' />
         <link rel='stylesheet' type='text/css' href='../stylesheets/style.css' />
         <script src="../javascripts/jQuery.js"></script>
         <script> $j = jQuery.noConflict() </script>
