--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -11,7 +11,7 @@ body {
         text-align: center;
         font-size: 60px;
 
-        #nameOrganization {
+        .nameOrganization {
             display: inline-block;
             color: $color-corporate-three;
             &:before {
@@ -43,9 +43,47 @@ body {
         bottom: 5px;
         width: 99%;
         text-align: center;
-        color: #FF6664;
+        color: $color-corporate-two;
         margin-left: 10px;
         font-size: 14px;
+    }
+
+    .menuDiv {
+        background-color: $color-corporate-three;
+        width: 50%;
+        margin: 0px auto;
+        height: 30px;
+        line-height: 28px;
+        border-radius: 7px;
+        padding-left: 20px;
+        //display: none;
+
+        ul {
+            padding: 0px;
+            .titleMenu {
+                display: inline-block;
+                list-style-type: none;
+                width: 22%;
+                cursor: pointer;
+                vertical-align: top;
+                padding-left: 20px;
+                
+                ul {
+                    display: none;
+                    li {
+                        display: block;
+                        width: 100%;
+                        background-color: $color-corporate-three;
+                    }
+                }
+            }
+
+            a {
+                color: black;
+                text-decoration: none;
+            }
+        }
+
     }
 }
 
