--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,24 +5,30 @@ input[type='submit'] { background-color: #337ab7; }
 
 input[type='reset'] { background-color: #d9534f; }
 
-#content #contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 10%; }
-#content #contentLogin h1 { text-align: center; }
-#content #contentLogin form { text-align: center; }
-#content #contentLogin form #spaceLogin { margin-right: 25px; }
-#content #contentLogin form #loginRegister { display: block; margin-bottom: 20px; margin-top: -7px; }
-#content #contentLogin form #pwd2 { display: none; }
-#content #contentLogin input[type='text'], #content #contentLogin input[type='password'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
-#content #divEtatLoginOk, #content #divEtatLoginNok { margin-top: 100px; margin-left: auto; margin-right: auto; width: 33%; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; margin-bottom: -6.85%; }
-#content #divEtatLoginOk { color: #3c763d; background-color: #dff0d8; border-color: #d6e9c6; }
-#content #divEtatLoginNok { color: #a94442; background-color: #f2dede; border-color: #ebccd1; }
+.content .contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 10%; }
+.content .contentLogin h1 { text-align: center; }
+.content .contentLogin form { text-align: center; }
+.content .contentLogin form .spaceLogin { margin-right: 25px; }
+.content .contentLogin form .loginRegister { display: block; margin-bottom: 20px; margin-top: -7px; }
+.content .contentLogin form .pwd2 { display: none; }
+.content .contentLogin input[type='text'], .content .contentLogin input[type='password'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
+.content .divEtatLoginOk, .content .divEtatLoginNok { margin-top: 100px; margin-left: auto; margin-right: auto; width: 33%; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; margin-bottom: -6.85%; }
+.content .divEtatLoginOk { color: #3c763d; background-color: #dff0d8; border-color: #d6e9c6; }
+.content .divEtatLoginNok { color: #a94442; background-color: #f2dede; border-color: #ebccd1; }
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
 body header { font-family: 'librarize'; margin-left: auto; margin-right: auto; color: rebeccapurple; text-align: center; font-size: 60px; }
-body header #nameOrganization { display: inline-block; color: #FFFFFF; }
-body header #nameOrganization:before { content: ""; }
+body header .nameOrganization { display: inline-block; color: #FFFFFF; }
+body header .nameOrganization:before { content: ""; }
 body header .libraryLeftIcon { display: inline-block; color: #FF6664; }
 body header .libraryLeftIcon:before { content: ""; }
 body header .libraryRightIcon { display: inline-block; color: #FF6664; }
 body header .libraryRightIcon:before { content: ""; }
 body footer { position: absolute; bottom: 5px; width: 99%; text-align: center; color: #FF6664; margin-left: 10px; font-size: 14px; }
+body .menuDiv { background-color: #FFFFFF; width: 50%; margin: 0px auto; height: 30px; line-height: 28px; border-radius: 7px; padding-left: 20px; display: none; }
+body .menuDiv ul { padding: 0px; }
+body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 22%; cursor: pointer; vertical-align: top; padding-left: 20px; }
+body .menuDiv ul .titleMenu ul { display: none; }
+body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; }
+body .menuDiv ul a { color: black; text-decoration: none; }
