form login post

--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -17,7 +17,7 @@
     <div class='contentLogin'>
         <h1 class='titleForm'></h1>
 
-        <form method='GET' class="formLogin">
+        <form method='POST' class="formLogin">
             <input type='text' name='pseudo' class='pseudo' required />
             <input type='password' name='pwd' class='pwd' required />
             <input type='password' name='pwd2' class='pwd2' />
