--- a/public/stylesheets/sass/_login.scss
+++ b/public/stylesheets/sass/_login.scss
@@ -24,7 +24,6 @@
             .loginRegister {
                 display: block;
                 margin-bottom: 20px;
-                margin-top: -7px
             }
 
             .pwd2 {
@@ -33,7 +32,8 @@
         }
 
         input[type='text'],
-        input[type='password'] {
+        input[type='password'],
+        input[type='email']{
             display: block;
             margin-right: auto;
             margin-left: auto;
