--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -5,5 +5,8 @@
 {%  block content %}
 
     <h1>Accueil !!</h1>
+    <form method='post' action='/user/login'>
+        <input type='submit' value='LogIn'>
+    </form>
 
 {% endblock %}
