--- a/views/login.html.twig
+++ b/views/login.html.twig
@@ -20,7 +20,12 @@
         <form method='POST' class="formLogin">
             <input type='text' name='pseudo' class='pseudo' required />
             <input type='password' name='pwd' class='pwd' required />
-            <input type='password' name='pwd2' class='pwd2' />
+
+            {# Si registrer #}
+            <div class='onlyRegisterInput'>
+                <input type='password' name='pwd2' class='pwd2' placeholder='Confirm Password' />
+                <input type='email' name='mail' class='mail' placeholder='Email' />
+            </div>
 
             <a href='#' class='loginRegister'></a>
 
