--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-input[type='submit'], input[type='reset'] { color: #fff; display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: bold; line-height: 1.5; text-align: center; vertical-align: middle; cursor: pointer; border: 1px solid transparent; border-radius: 4px; }
+input[type='submit'], input[type='reset'] { color: #FFFFFF; display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: bold; line-height: 1.5; text-align: center; vertical-align: middle; cursor: pointer; border: 1px solid transparent; border-radius: 4px; }
 
 input[type='submit'] { background-color: #337ab7; }
 
@@ -11,10 +11,17 @@ input[type='reset'] { background-color: #d9534f; }
 .content .contentLogin form .spaceLogin { margin-right: 25px; }
 .content .contentLogin form .loginRegister { display: block; margin-bottom: 20px; }
 .content .contentLogin form .pwd2 { display: none; }
+.content .contentLogin form .linkRegister a { display: inline-block; }
 .content .contentLogin input[type='text'], .content .contentLogin input[type='password'], .content .contentLogin input[type='email'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
 .content .divEtatLoginOk, .content .divEtatLoginNok { margin-top: 100px; margin-left: auto; margin-right: auto; width: 33%; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; margin-bottom: -6.85%; }
-.content .divEtatLoginOk { color: #3c763d; background-color: #dff0d8; border-color: #d6e9c6; }
-.content .divEtatLoginNok { color: #a94442; background-color: #f2dede; border-color: #ebccd1; }
+.content .divEtatLoginOk { color: #3C763D; background-color: #DFF0F8; border-color: #D6D9C6; }
+.content .divEtatLoginNok { color: #A94442; background-color: #F2DDED; border-color: #EBCCD1; }
+
+.bgdForgotPwd { color: #FFFFFF; background-color: #B72F6B; text-align: center; }
+.bgdForgotPwd .titleForgotPwd { margin-top: 0px; margin-bottom: 20px; }
+.bgdForgotPwd .infoForgotPwd { width: 50%; margin: 0 auto 0 auto; margin-bottom: 4px; }
+.bgdForgotPwd input[type='text'], .bgdForgotPwd input[type='password'], .bgdForgotPwd input[type='email'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
+.bgdForgotPwd input[type='submit'], .bgdForgotPwd input[type='reset'] { margin-top: 10px; }
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
@@ -26,9 +33,9 @@ body header .libraryLeftIcon:before { content: ""; }
 body header .libraryRightIcon { display: inline-block; color: #FF6664; }
 body header .libraryRightIcon:before { content: ""; }
 body footer { position: absolute; bottom: 5px; width: 99%; text-align: center; color: #FF6664; margin-left: 10px; font-size: 14px; }
-body .menuDiv { background-color: #FFFFFF; width: 50%; margin: 0px auto; height: 30px; line-height: 28px; border-radius: 7px; padding-left: 20px; }
+body .menuDiv { background-color: #FFFFFF; width: 50%; margin: 0px auto; height: 30px; line-height: 28px; border-radius: 7px; text-align: center; }
 body .menuDiv ul { padding: 0px; }
-body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 22%; cursor: pointer; vertical-align: top; padding-left: 20px; }
-body .menuDiv ul .titleMenu ul { display: none; }
+body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 22%; cursor: pointer; vertical-align: top; }
+body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; }
 body .menuDiv ul a { color: black; text-decoration: none; }
