Formulaire de navigation Afficher pseudo dans le menu + quelques bugs

--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -62,7 +62,7 @@ body {
             .titleMenu {
                 display: inline-block;
                 list-style-type: none;
-                width: 22%;
+                width: 24%;
                 cursor: pointer;
                 vertical-align: top;
                 
@@ -73,6 +73,10 @@ body {
                         display: block;
                         width: 100%;
                         background-color: $color-corporate-three;
+                        div {
+                            width: auto;
+                            padding-left: 15px;
+                        }
                     }
                 }
             }
