--- a/views/forgotPwd.html.twig
+++ b/views/forgotPwd.html.twig
@@ -26,10 +26,10 @@
     <div class='infoForgotPwd'>Un mail sera envoyé à l'adresse renseigné si celle-ci correspond au pseudo</div>
     <div class='contentForgotPwd'>
         <form method='POST' class='formForgotPwd' action='forgotPassword/submit'>
-            <input type='text' name='pseudoForgotPwd' class='pseudoForgotPwd' placeholder='Pseudo' required />
-            <input type='email' name='mailForgotPwd' class='mailForgotPwd' placeholder='Mail' required />
-            <input type='reset' value='Annuler' class='spaceLogin' />
-            <input type='submit' value="Envoyer" class='submitFormLogin' />
+            <input type='text' name='pseudoForgotPwd' placeholder='Pseudo' required />
+            <input type='email' name='mailForgotPwd' placeholder='Mail' required />
+            <input type='reset' value='Annuler'/>
+            <input type='submit' value="Envoyer"/>
         </form>
     </div>
 
