--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -4,9 +4,6 @@
 
 {%  block content %}
 
-    <h1>Accueil !!</h1>
-    <form method='post' action='/user/login'>
-        <input type='submit' value='LogIn'>
-    </form>
+    <h1>Home !!</h1>
 
 {% endblock %}
