--- a/public/stylesheets/sass/_login.scss
+++ b/public/stylesheets/sass/_login.scss
@@ -114,5 +114,8 @@
     input[type='reset'] {
         margin-top: 10px;
     }
-    //background-image: url("../../images/bgdPwd.png");
+
+    input[type='reset'] {
+        margin-right: 10px;
+    }
 }
