--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,7 @@ input[type='reset'] { background-color: #d9534f; }
 .bgdForgotPwd .infoForgotPwd { width: 50%; margin: 0 auto 0 auto; margin-bottom: 4px; }
 .bgdForgotPwd input[type='text'], .bgdForgotPwd input[type='password'], .bgdForgotPwd input[type='email'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
 .bgdForgotPwd input[type='submit'], .bgdForgotPwd input[type='reset'] { margin-top: 10px; }
+.bgdForgotPwd input[type='reset'] { margin-right: 10px; }
 
 @font-face { font-family: 'librarize'; src: url("../images/librarize.eot?p5irvb"); src: url("../images/librarize.eot?p5irvb#iefix") format("embedded-opentype"), url("../images/librarize.ttf?p5irvb") format("truetype"), url("../images/librarize.woff?p5irvb") format("woff"), url("../images/librarize.svg?p5irvb#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 body { background-color: #092D3D; }
@@ -35,7 +36,8 @@ body header .libraryRightIcon:before { content: ""; }
 body footer { position: absolute; bottom: 5px; width: 99%; text-align: center; color: #FF6664; margin-left: 10px; font-size: 14px; }
 body .menuDiv { background-color: #FFFFFF; width: 50%; margin: 0px auto; height: 30px; line-height: 28px; border-radius: 7px; text-align: center; }
 body .menuDiv ul { padding: 0px; }
-body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 22%; cursor: pointer; vertical-align: top; }
+body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 24%; cursor: pointer; vertical-align: top; }
 body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; }
+body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
