--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -5,6 +5,6 @@
 {%  block content %}
 
     <h1>Bienvenue sur l'application l'ibrarizeMe qui permet de ... </h1>
-    <a href="/user/login">Se connecter / S'enregistrer</a>
+    <input type='submit' value='Sign in / Sign up' class='menuNav' data='/user/login'>
 
 {% endblock %}
