--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -41,7 +41,12 @@
                     </ul>
                 </li>
                 <li class='titleMenu'>
-                    <a href='/user/logout'>Déconnexion</a>
+                    <div class="test">{{ result.pseudoUser }}</div>
+                    <ul>
+                        <li><div>Mes informations</div></li>
+                        <li class='menuNav' data='/user/logout'><div>Déconnexion</div></li>
+                    </ul>
+
                 </li>
             </ul>
         </div>
@@ -51,19 +56,22 @@
         </div>
 
         <footer>
-            <div id='footer'>&#64;2017 LibrarizeMe</div>
+            <div id='footer'>&#64;2017 LibrarizeMe  {{ result.etatMenu }} {{ result['etatMenu'] }} {{ result.getEtatMenu }}</div>
         </footer>
     </body>
 
 
-{% if etatMenu == 'show' %}
+
+{% if result.etatMenu == 'show' %}
     <script>
         $j('.menuDiv').css('display', 'block');
     </script>
-{% elseif etatMenu == 'hide' %}
+{% elseif result.etatMenu == 'hide' %}
     <script>
         $j('.menuDiv').css('display', 'none');
     </script>
 {% endif %}
+
+<form method='POST' class='formNavigateMenu' action='#'></form>
 
 </html>
