--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -49,7 +49,7 @@ body {
     }
 
     .menuDiv {
-        background-color: $color-font-content;
+        background-color: $color-font-content-gray;
         width: 80%;
         margin: 0px auto;
         height: 35px;
@@ -65,6 +65,7 @@ body {
                 width: 24%;
                 cursor: pointer;
                 vertical-align: top;
+                position: relative;
                 
                 ul {
                     display: none;
@@ -91,7 +92,17 @@ body {
                 text-decoration: none;
             }
         }
+    }
 
+    .generalContent {
+        background-color: $color-font-content-gray;
+        width: 80%;
+        margin: 0px auto;
+        border-radius: 5px;
+
+        h1:first-child {
+            text-align: center;
+        }
     }
 }
 
