--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+input[type='text'], input[type='password'], input[type='email'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
+
 input[type='submit'], input[type='reset'] { color: #FFFFFF; display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: bold; line-height: 1.5; text-align: center; vertical-align: middle; cursor: pointer; border: 1px solid transparent; border-radius: 4px; }
 
 input[type='submit'] { background-color: #337ab7; }
@@ -20,7 +22,6 @@ input[type='reset'] { background-color: #d9534f; }
 .bgdForgotPwd { color: #FFFFFF; background-color: #B72F6B; text-align: center; }
 .bgdForgotPwd .titleForgotPwd { margin-top: 0px; margin-bottom: 20px; }
 .bgdForgotPwd .infoForgotPwd { width: 50%; margin: 0 auto 0 auto; margin-bottom: 4px; }
-.bgdForgotPwd input[type='text'], .bgdForgotPwd input[type='password'], .bgdForgotPwd input[type='email'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
 .bgdForgotPwd input[type='submit'], .bgdForgotPwd input[type='reset'] { margin-top: 10px; }
 .bgdForgotPwd input[type='reset'] { margin-right: 10px; }
 
@@ -36,8 +37,17 @@ body header .libraryRightIcon:before { content: ""; }
 body footer { position: absolute; bottom: 5px; width: 99%; text-align: center; color: #FF6664; margin-left: 10px; font-size: 14px; }
 body .menuDiv { background-color: #CCCCCC; width: 80%; margin: 0px auto; height: 35px; line-height: 35px; border-radius: 7px; text-align: center; font-weight: bold; }
 body .menuDiv ul { padding: 0px; }
-body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 24%; cursor: pointer; vertical-align: top; }
+body .menuDiv ul .titleMenu { display: inline-block; list-style-type: none; width: 24%; cursor: pointer; vertical-align: top; position: relative; }
 body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; height: 40px; border-radius: 5px; margin-top: 5px; line-height: 35px; box-shadow: inset -6px -6px 5px 0px #656565; }
 body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
+body .generalContent { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; }
+body .generalContent h1:first-child { text-align: center; }
+
+.generalContent .userInformations { margin-left: 10%; padding-top: 4%; }
+.generalContent .userInformations .userInformationsLeft, .generalContent .userInformations .userInformationsRight { width: 35%; display: inline-block; vertical-align: top; text-align: center; }
+.generalContent .userInformations .userInformationsLeft { margin-right: 10%; }
+.generalContent .userInformations span { display: block; margin-bottom: 30px; }
+.generalContent .userInformations span label { display: inline-block; width: 60px; font-weight: bold; text-align: left; }
+.generalContent .userInformations span input[type='text'], .generalContent .userInformations span input[type='email'] { display: inline-block; width: 50%; }
