--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -23,7 +23,7 @@
 
         <div class='menuDiv'>
             <ul>
-                <li class='titleMenu'>Accueil</li>
+                <li class='titleMenu menuNav' data='/home'>Accueil</li>
                 <li class='titleMenu'>
                     Services
                     <ul>
