--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -41,11 +41,12 @@ body {
     footer {
         position: absolute;
         bottom: 5px;
-        width: 99%;
+        width: 80%;
         text-align: center;
         color: $color-corporate-two;
         margin-left: 10px;
         font-size: 14px;
+        right: 10%;
     }
 
     .menuDiv {
