Modifications informations personnelles de l'utilisateur.

--- a/public/stylesheets/sass/_template.scss
+++ b/public/stylesheets/sass/_template.scss
@@ -101,6 +101,8 @@ body {
         margin: 0px auto;
         border-radius: 5px;
 
+        padding-bottom: 25px;
+
         h1:first-child {
             text-align: center;
         }
