--- a/views/UserViews/login.html.twig
+++ b/views/UserViews/login.html.twig
@@ -24,10 +24,10 @@
             {# if registrer #}
             <div class='onlyRegisterInput'>
                 <input type='password' name='pwd2' class='pwd2' placeholder='Confirmer mot de passe' />
-                <input type='text' name='lastname' placeholder='Nom' />
-                <input type='text' name='firstname' placeholder='Prénom' />
+                <input type='text' name='lastname' placeholder='Nom' class='lastnameRegister' />
+                <input type='text' name='firstname' placeholder='Prénom' class='firstnameRegister'/>
                 <input type='email' name='mail' class='mail' placeholder='Email' />
-                <input type='text' name='numberphone' placeholder='Mobile' />
+                <input type='text' name='numberphone' placeholder='Mobile' class='mailRegister'/>
             </div>
             {# endIf registrer #}
 
