--- a/public/stylesheets/sass/_base.scss
+++ b/public/stylesheets/sass/_base.scss
@@ -55,6 +55,10 @@ input[type='reset'] {
     border-radius: 4px;
 }
 
+input[type='submit']:disabled {
+    background: #DDDDDD;
+}
+
 input[type='submit'] {
     background-color: #337ab7;
 }
