--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,8 @@ input[type='text'], input[type='password'], input[type='email'] { display: block
 
 input[type='submit'], input[type='reset'] { color: #FFFFFF; display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: bold; line-height: 1.5; text-align: center; vertical-align: middle; cursor: pointer; border: 1px solid transparent; border-radius: 4px; }
 
+input[type='submit']:disabled { background: #DDDDDD; }
+
 input[type='submit'] { background-color: #337ab7; }
 
 input[type='reset'] { background-color: #d9534f; }
@@ -14,7 +16,6 @@ input[type='reset'] { background-color: #d9534f; }
 .content .contentLogin form .loginRegister { display: block; margin-bottom: 20px; }
 .content .contentLogin form .pwd2 { display: none; }
 .content .contentLogin form .linkRegister a { display: inline-block; }
-.content .contentLogin input[type='text'], .content .contentLogin input[type='password'], .content .contentLogin input[type='email'] { display: block; margin-right: auto; margin-left: auto; margin-bottom: 10px; width: 32%; font-size: 16px; border: none; border-radius: 5px; height: 30px; padding-left: 10px; }
 .content .divEtatLoginOk, .content .divEtatLoginNok { margin-top: 100px; margin-left: auto; margin-right: auto; width: 33%; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; margin-bottom: -6.85%; }
 .content .divEtatLoginOk { color: #3C763D; background-color: #DFF0F8; border-color: #D6D9C6; }
 .content .divEtatLoginNok { color: #A94442; background-color: #F2DDED; border-color: #EBCCD1; }
@@ -42,12 +43,17 @@ body .menuDiv ul .titleMenu ul { display: none; text-align: left; }
 body .menuDiv ul .titleMenu ul li { display: block; width: 100%; background-color: #FFFFFF; height: 40px; border-radius: 5px; margin-top: 5px; line-height: 35px; box-shadow: inset -6px -6px 5px 0px #656565; }
 body .menuDiv ul .titleMenu ul li div { width: auto; padding-left: 15px; }
 body .menuDiv ul a { color: black; text-decoration: none; }
-body .generalContent { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; }
+body .generalContent { background-color: #CCCCCC; width: 80%; margin: 0px auto; border-radius: 5px; padding-bottom: 25px; }
 body .generalContent h1:first-child { text-align: center; }
 
-.generalContent .userInformations { margin-left: 10%; padding-top: 4%; }
-.generalContent .userInformations .userInformationsLeft, .generalContent .userInformations .userInformationsRight { width: 35%; display: inline-block; vertical-align: top; text-align: center; }
-.generalContent .userInformations .userInformationsLeft { margin-right: 10%; }
-.generalContent .userInformations span { display: block; margin-bottom: 30px; }
-.generalContent .userInformations span label { display: inline-block; width: 60px; font-weight: bold; text-align: left; }
-.generalContent .userInformations span input[type='text'], .generalContent .userInformations span input[type='email'] { display: inline-block; width: 50%; }
+.generalContent { text-align: center; }
+.generalContent .msgUpdateUser { margin-left: auto; margin-right: auto; width: 33%; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; height: 24px; }
+.generalContent .msgOk { color: #3C763D; background-color: #DFF0F8; border-color: #D6D9C6; }
+.generalContent .msgNok { color: #A94442; background-color: #F2DDED; border-color: #EBCCD1; }
+.generalContent .formUpdateUserInformations input[type='reset'] { margin-right: 5%; }
+.generalContent .formUpdateUserInformations .userInformations { padding-top: 4%; }
+.generalContent .formUpdateUserInformations .userInformations .userInformationsLeft, .generalContent .formUpdateUserInformations .userInformations .userInformationsRight { width: 35%; display: inline-block; vertical-align: top; text-align: center; }
+.generalContent .formUpdateUserInformations .userInformations .userInformationsLeft { margin-right: 10%; }
+.generalContent .formUpdateUserInformations .userInformations span { display: block; margin-bottom: 30px; }
+.generalContent .formUpdateUserInformations .userInformations span label { display: inline-block; width: 60px; font-weight: bold; text-align: left; }
+.generalContent .formUpdateUserInformations .userInformations span input[type='text'], .generalContent .formUpdateUserInformations .userInformations span input[type='email'] { display: inline-block; width: 50%; }
