FIX : Login pwd2

--- a/public/stylesheets/sass/_login.scss
+++ b/public/stylesheets/sass/_login.scss
@@ -26,9 +26,9 @@
                 margin-bottom: 20px;
             }
 
-            .pwd2 {
+            /*.pwd2 {
                 display: none;
-            }
+            }*/
 
             .linkRegister {
                 a {
