Modification de mot de passe

--- a/public/stylesheets/sass/_userInformations.scss
+++ b/public/stylesheets/sass/_userInformations.scss
@@ -67,3 +67,19 @@
         }
     }
 }
+
+.contentChangePwd {
+    .formForgotPwd {
+        input[type='password'] {
+            width: 230px;
+        }
+
+        //input[type='submit'] {
+        //    width: 230px;
+        //}
+
+        .changePwdStep2 {
+            display: none;
+        }
+    }
+}
