--- a/views/UserViews/informations.html.twig
+++ b/views/UserViews/informations.html.twig
@@ -38,6 +38,10 @@
                         <label>Mobile</label>
                         <input type='text'  name='numberphone' maxlength='14' pattern='^[0-9]{10}|[0-9 ]{14}$' title='Format de téléphone à 10 chiffres'  value='{{ user.numberphone }}' data='{{ user.numberphone }}' placeholder='Mobile' class='updateMobile updateInfos' />
                     </span>
+
+                    <span>
+                        <button type='submit' class='changePwd'>Changer mon mot de passe</button>
+                    </span>
                 </div>
             </div>
             <input type='reset' value='Annuler' />
