--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,8 @@ input[type='submit'] { background-color: #337ab7; }
 
 input[type='reset'] { background-color: #d9534f; }
 
+button { color: #fff; background-color: #5cb85c; border-color: #4cae4c; display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: bold; line-height: 1.5; text-align: center; vertical-align: middle; cursor: pointer; border: 1px solid transparent; border-radius: 4px; }
+
 .content .contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 10%; }
 .content .contentLogin h1 { text-align: center; }
 .content .contentLogin form { text-align: center; /*.pwd2 { display: none;
@@ -57,3 +59,6 @@ body .generalContent h1:first-child { text-align: center; }
 .generalContent .formUpdateUserInformations .userInformations span { display: block; margin-bottom: 30px; }
 .generalContent .formUpdateUserInformations .userInformations span label { display: inline-block; width: 60px; font-weight: bold; text-align: left; }
 .generalContent .formUpdateUserInformations .userInformations span input[type='text'], .generalContent .formUpdateUserInformations .userInformations span input[type='email'] { display: inline-block; width: 50%; }
+
+.contentChangePwd .formForgotPwd input[type='password'] { width: 230px; }
+.contentChangePwd .formForgotPwd .changePwdStep2 { display: none; }
