add Product to arbo

--- a/views/template.html.twig
+++ b/views/template.html.twig
@@ -33,11 +33,11 @@
                     </ul>
                 </li>
                 <li class='titleMenu'>
-                    Projets
+                    Bibliothèque
                     <ul>
-                        <li><div>Projets 1</div></li>
-                        <li><div>Projets 2</div></li>
-                        <li><div>Projets 3</div></li>
+                        <li class='menuNav' data='/produit/mesProduits'><div>Mes produits</div></li>
+                        <li><div></div></li>
+                        <li><div></div></li>
                         <li><div>Projets 4</div></li>
                     </ul>
                 </li>
