add isMale for User

--- a/public/stylesheets/sass/_login.scss
+++ b/public/stylesheets/sass/_login.scss
@@ -26,9 +26,13 @@
                 margin-bottom: 20px;
             }
 
-            /*.pwd2 {
-                display: none;
-            }*/
+            input[type='radio'] {
+                margin-bottom: 15px;
+            }
+
+            .radioF {
+                margin-left: 20px;
+            }
 
             .linkRegister {
                 a {
