--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,10 +13,11 @@ button { color: #fff; background-color: #5cb85c; border-color: #4cae4c; display:
 
 .content .contentLogin { background-color: #CCCCCC; width: 33%; margin-left: auto; margin-right: auto; padding-bottom: 20px; border-radius: 15px; margin-top: 10%; }
 .content .contentLogin h1 { text-align: center; }
-.content .contentLogin form { text-align: center; /*.pwd2 { display: none;
-}*/ }
+.content .contentLogin form { text-align: center; }
 .content .contentLogin form .spaceLogin { margin-right: 25px; }
 .content .contentLogin form .loginRegister { display: block; margin-bottom: 20px; }
+.content .contentLogin form input[type='radio'] { margin-bottom: 15px; }
+.content .contentLogin form .radioF { margin-left: 20px; }
 .content .contentLogin form .linkRegister a { display: inline-block; }
 .content .divEtatLoginOk, .content .divEtatLoginNok { margin-top: 100px; margin-left: auto; margin-right: auto; width: 33%; text-align: center; font-size: 20px; padding: 3px; border-radius: 5px; margin-bottom: -6.85%; }
 .content .divEtatLoginOk { color: #3C763D; background-color: #DFF0F8; border-color: #D6D9C6; }
