--- a/views/UserViews/informations.html.twig
+++ b/views/UserViews/informations.html.twig
@@ -14,6 +14,11 @@
 
                 <div class='userInformationsLeft'>
                     <span>
+
+                    </span>
+
+
+                    <span>
                         <label>Pseudo</label>
                         <input type='text' name='pseudo' value='{{ user.pseudo }}' data='{{ user.pseudo }}' placeholder='Pseudo' required class='inputUpdateUserInformations updatePseudo'/>
                     </span>
