--- a/views/UserViews/login.html.twig
+++ b/views/UserViews/login.html.twig
@@ -26,8 +26,12 @@
                 <input type='password' name='pwd2' class='pwd2' placeholder='Confirmer mot de passe' />
                 <input type='text' name='lastname' placeholder='Nom' class='lastnameRegister' />
                 <input type='text' name='firstname' placeholder='Prénom' class='firstnameRegister'/>
+                <input type="radio" name="gender" value='true' checked='true' />Homme
+                <input type="radio" name="gender" value='false' class='radioF' />Femme
+
                 <input type='email' name='mail' class='mail' placeholder='Email' />
                 <input type='text' name='numberphone' placeholder='Mobile' class='mailRegister'/>
+
             </div>
             {# endIf registrer #}
 
